Partial fix for NW-350: UTF_8 constant.